# uf2-util

./: Cargo.toml  README.md
src/: crc.rs  main.rs
